--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ body {
     font-weight: 700;
     text-transform: uppercase;
     transition: background-color 0.2s ease, color 0.2s ease;
-    padding: 30px 10px;
+    padding: 5px 10px;
     border-radius: 9px;
     letter-spacing: 2px; /* Add spacing between the letters */
 }
@@ -86,6 +86,7 @@ body {
     border-radius: 9px;
     transition: all 0.3s ease;
     width: 40px; /* Start with the width of the button */
+    height: 10px;
 }
 
 /* Search Button (Magnifying Glass) */
