--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,8 @@
 .nav-list {
     list-style: none;
     display: flex;
-    gap: 30px; 
+    gap: 30px;
+    padding-left: 100px;
 }
 
 .nav-list a {
