--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@
 
 .nav-list a {
     text-decoration: none;
+    font-family: 'Exo 2', sans-serif !important;
     color: #fff;
     font-size: 16px;
     font-weight: 700;
@@ -144,33 +145,4 @@
 
 .btn:hover {
     background-color: #e03e4e;
-}
-
-.subscribe-checkbox {
-    display: none; /* Hides the checkbox */
-}
-
-.subscribe-toggle .btn {
-    display: inline-block;
-    text-decoration: none;
-    background-color: #ff4655;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 9px;
-    font-size: 16px;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-align: center;
-    transition: background-color 0.3s ease, color 0.3s ease;
-    cursor: pointer;
-}
-
-.subscribe-checkbox:checked + .btn {
-    content: "Subscribed";
-    background-color: #e03e4e;
-    color: #fff;
-}
-
-.subscribe-checkbox:checked + .btn::after {
-    content: "Subscribed";
 }
