--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,10 @@
     height: 55px;
 }
 
+.website-name {
+
+}
+
 .nav {
     flex-grow: 1;
     display: flex;
@@ -145,4 +149,5 @@
 
 .btn:hover {
     background-color: #e03e4e;
+    cursor: pointer;
 }
