--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,7 @@
 }
 
 .nav-list a {
-    text-decoration: none;
-    color: #fff;
+    background: linear-gradient(red, white);
     font-size: 16px;
     font-weight: 700;
     font-family: 'Exo 2', sans-serif !important;
@@ -84,7 +83,7 @@
 }
 
 .search-btn {
-    background: none;
+    background: #222;
     border: none;
     cursor: pointer;
     padding: 5px;
@@ -118,6 +117,7 @@
     width: 0; 
     opacity: 0; 
     transform: scaleX(0);
+    flex-grow: 1;
     transition: width 0.3s ease, opacity 0.3s ease, transform 0.3s ease;
     position: relative;
     padding-left: 15px;
@@ -137,7 +137,7 @@
 
 .btn {
     text-decoration: none;
-    background-color: #ff4655;
+    background-image: linear-gradient(to right, red, orange);
     color: #fff;
     padding: 10px 20px;
     border-radius: 9px;
@@ -149,6 +149,6 @@
 }
 
 .btn:hover {
-    background-color: #e03e4e;
+    background-image: linear-gradient(red, orange);
     cursor: pointer;
 }
