--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@
 
 .btn {
     text-decoration: none;
-    background-color: #ff4655;
+    background-image: gradient(to right, #ff4655, #DC143C);
     color: #fff;
     padding: 10px 20px;
     border-radius: 9px;
@@ -150,6 +150,6 @@
 }
 
 .btn:hover {
-    background-color: #e03e4e;
+    transition: opacity 0.3s ease;
     cursor: pointer;
 }
