--- a/styles.css
+++ b/styles.css
@@ -54,17 +54,35 @@
     font-weight: 700;
     font-family: 'Exo 2', sans-serif !important;
     text-transform: uppercase;
-    transition: background-color 0.2s ease, color 0.2s ease;
     padding: 5px 10px;
     padding: 10px 10px;
     border-radius: 9px;
-    letter-spacing: 2px; 
+    letter-spacing: 2px;
+    position: relative; 
+    transition: color 0.2s ease;
+}
+
+.nav-list a::after {
+    content: ""; 
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: #ff4655;
+    transition: width 0.3s ease;
+    border-radius: 5px;
+}
+
+.nav-list a:hover::after {
+    width: 100%; 
+    background-color: #ff4655;
 }
 
 .nav-list a:hover {
-    background-color: #222;
     color: #ff4655;
 }
+
 
 .actions {
     display: flex;
