--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@
     opacity: 0;
     transform: scaleX(0);
     transition: width 0.3s ease, opacity 0.3s ease, transform 0.3s ease;
-    padding: 5px 10px 5px 40px; /* Left padding for the icon */
+    padding: 5px 10px 5px 40px; 
     border-radius: 9px;
 }
 
@@ -154,7 +154,7 @@
 
 .btn {
     text-decoration: none;
-    background-image: gradient(to right, #ff4655, #DC143C);
+    background-color: #ff4655;
     color: #fff;
     padding: 10px 20px;
     border-radius: 9px;
