--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@
     left: 0;
     bottom: 0;
     width: 0;
-    height: 2px;
+    height: 3px;
     background-color: #ff4655;
     transition: width 0.3s ease;
     border-radius: 5px;
@@ -82,7 +82,6 @@
 .nav-list a:hover {
     color: #ff4655;
 }
-
 
 .actions {
     display: flex;
@@ -154,7 +153,7 @@
 
 .btn {
     text-decoration: none;
-    background-color: #ff4655;
+    background: #ff4655;
     color: #fff;
     padding: 10px 20px;
     border-radius: 9px;
