--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@
 
 .btn {
     text-decoration: none;
-    background: #ff4655;
+    background-image: linear-gradient(to right, #ff4655, #DC143C);
     color: #fff;
     padding: 10px 20px;
     border-radius: 9px;
@@ -161,10 +161,12 @@
     font-weight: 700;
     font-family: 'Exo 2', sans-serif !important;
     text-transform: uppercase;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, opacity 0.3s ease;
+    display: inline-block;
 }
 
 .btn:hover {
-    transition: opacity 0.3s ease;
     cursor: pointer;
+    opacity: 0.8;
+    background-image: linear-gradient(to right, #ff4655, #DC143C);
 }
