--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,9 @@
 }
 
 .nav {
-    flex-grow: 1;
     display: flex;
-    justify-content: flex-start; 
+    justify-content: flex-start;
+    flex-grow: 1;  /* Allow this to take up remaining space */
 }
 
 .nav-list {
@@ -54,7 +54,6 @@
     font-weight: 700;
     font-family: 'Exo 2', sans-serif !important;
     text-transform: uppercase;
-    padding: 5px 10px;
     padding: 10px 10px;
     border-radius: 9px;
     letter-spacing: 2px;
@@ -68,7 +67,6 @@
     left: 0;
     bottom: 0;
     width: 0;
-    height: 2px;
     height: 3px;
     background-color: #ff4655;
     transition: width 0.3s ease;
@@ -101,7 +99,7 @@
     width: 40px;
     height: 40px;
     overflow: hidden;
-    margin-left: auto;
+    margin-left: auto; /* Keep the search bar on the right */
 }
 
 .search:focus-within {
@@ -157,7 +155,6 @@
 .btn {
     text-decoration: none;
     background-color: #ff4655;
-    background: #ff4655;
     color: #fff;
     padding: 10px 20px;
     border-radius: 9px;
@@ -169,6 +166,5 @@
 }
 
 .btn:hover {
-    transition: opacity 0.3s ease;
     cursor: pointer;
 }
