--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
 }
 
 .logo {
-    height: 55px;
+    height: 18px;
 }
 
 .nav {
@@ -154,6 +154,7 @@
 }
 
 .btn:hover {
+    opacity: 0.7;
     transition: opacity 0.3s ease;
     cursor: pointer;
 }
