--- a/styles.css
+++ b/styles.css
@@ -17,15 +17,16 @@
 }
 
 .container {
-    position: flex;
+    display: flex;
     justify-content: space-between;
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
 }
 
-.logo {
-    height: 18px;
+.logo img {
+    max-height: 50px;
+    max-width: auto;
 }
 
 .nav {
@@ -46,7 +47,6 @@
     color: #fff;
     font-size: 16px;
     font-weight: 700;
-    font-family: 'Exo 2', sans-serif !important;
     text-transform: uppercase;
     transition: color 0.2s ease;
     padding: 10px 10px;
@@ -66,7 +66,7 @@
     border-radius: 5px;
 }
 
-.nav-list a:hover:c:after {
+.nav-list a:hover::after {
     width: 100%; 
     background-color: #ff4655;
 }
@@ -77,7 +77,7 @@
 
 .actions {
     display: flex;
-    right: 20px
+    right: 20px;
     align-items: center;
     gap: 10px;
 }
@@ -148,13 +148,11 @@
     border-radius: 9px;
     font-size: 16px;
     font-weight: 700;
-    font-family: 'Exo 2', sans-serif !important;
     text-transform: uppercase;
     transition: background-color 0.3s ease;
 }
 
 .btn:hover {
     opacity: 0.7;
-    transition: opacity 0.3s ease;
     cursor: pointer;
 }
