--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@
     flex-grow: 1;
     display: flex;
     justify-content: flex-start; 
+    align-items: center; /* Ensure vertical alignment */
 }
 
 .nav-list {
@@ -48,10 +49,10 @@
     font-weight: 700;
     font-family: 'Exo 2', sans-serif !important;
     text-transform: uppercase;
-    padding: 30px 10px 10px 10px;
+    padding: 15px 10px; 
     border-radius: 9px;
     letter-spacing: 2px;
-    position: relative; 
+    position: relative;
     transition: color 0.2s ease;
 }
 
@@ -59,10 +60,9 @@
     content: ""; 
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: -2px; 
     width: 0;
-    height: 2px;
-    height: 3px;
+    height: 3px; 
     background-color: #ff4655;
     transition: width 0.3s ease;
     border-radius: 5px;
@@ -76,6 +76,7 @@
 .nav-list a:hover {
     color: #ff4655;
 }
+
 .actions {
     display: flex;
     right: 20px;
