--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@
     list-style: none;
     display: flex;
     gap: 30px;
+    padding-left: 25px;
 }
 
 .nav-list a {
@@ -101,14 +102,12 @@
 }
 
 .search-btn {
-    background: none;
-    border: none;
-    cursor: pointer;
     position: absolute;
-    left: 0;
-    top: 0;
-    width: 40px;
-    height: 40px;
+    left: 5px; 
+    top: 50%;
+    transform: translateY(-50%);
+    width: 30px;
+    height: 30px;
     z-index: 1;
 }
 
@@ -132,7 +131,7 @@
     opacity: 0;
     transform: scaleX(0);
     transition: width 0.3s ease, opacity 0.3s ease, transform 0.3s ease;
-    padding: 5px 10px 5px 10px; 
+    padding: 5px 10px 5px 50px;
     border-radius: 9px;
 }
 
