--- a/styles.css
+++ b/styles.css
@@ -152,19 +152,33 @@
 }
 
 .btn {
-    text-decoration: none;
+text-decoration: none;
+color: #fff;
+padding: 10px 20px;
+border-radius: 9px;
+font-size: 16px;
+font-weight: 700;
+text-transform: uppercase;
+transition: background-color 0.3s ease;
+}
+
+.btn::after {
+    content: ""; 
+    position: absolute;
+    left: 0;
+    bottom: -2px; 
+    width: 0;
+    height: 3px; 
     background-color: #ff4655;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 9px;
-    font-size: 16px;
-    font-weight: 700;
-    text-transform: uppercase;
-    transition: background-color 0.3s ease;
+    transition: width 0.3s ease;
+    border-radius: 5px;
+}
+
+.btn:hover::after {
+    width: 100%; 
+    background-color: #ff4655;
 }
 
 .btn:hover {
-    opacity: 0.7;
-    transition: opacity 0.3s ease;
-    cursor: pointer;
+    color: #ff4655;
 }
