--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,6 @@
     font-family: 'Exo 2', sans-serif !important;
     text-transform: uppercase;
     padding: 15px 10px; 
-    border-radius: 9px;
     letter-spacing: 2px;
     position: relative;
     transition: color 0.2s ease;
@@ -154,12 +153,12 @@
 .btn {
     text-decoration: none;
     color: #fff;
-    padding: 10px 20px;
-    border-radius: 9px;
     font-size: 16px;
     font-weight: 700;
     text-transform: uppercase;
-    transition: background-color 0.3s ease;
+    padding: 10px 20px;
+    font-weight: 700;
+    letter-spacing: 2px; 
 }
 
 .btn::after {
