--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,6 @@
 .search:focus-within {
     width: 200px;
     border: 1px solid #ff4655;
-    transition: width 0.3s ease, border 0.3s ease;
 }
 
 .search-btn {
@@ -111,8 +110,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 40px;
-    height: 40px;
+    width: 40px; 
+    height: 40px; 
     position: absolute;
     left: 0;
     top: 0;
@@ -128,8 +127,8 @@
 
 .search-btn:hover img {
     filter: brightness(0) saturate(100%) invert(26%) sepia(100%) saturate(500%) hue-rotate(346deg) brightness(110%) contrast(105%);
+    transition: filter 0.3s ease;
 }
-
 .search-input {
     background: #222;
     border: none;
@@ -140,7 +139,7 @@
     opacity: 0;
     transform: scaleX(0);
     transition: width 0.3s ease, opacity 0.3s ease, transform 0.3s ease;
-    padding: 5px 10px 5px 40px; /* Space for the icon */
+    padding: 5px 10px 5px 40px; 
     border-radius: 9px;
 }
 
@@ -152,51 +151,19 @@
 
 .btn {
     text-decoration: none;
+    background-color: #000000;
     color: #fff;
+    padding: 10px 20px;
     font-size: 16px;
     font-weight: 700;
+    font-family: 'Exo 2', sans-serif !important;
     text-transform: uppercase;
-    padding: 10px 20px;
-    letter-spacing: 2px;
-    position: relative;
-    transition: background-color 0.3s ease, color 0.3s ease;
+    transition: all 0.3s ease;
 }
 
 .btn:hover {
-    background-color: #fff;
-    color: #333; /* Darker color to avoid blending with the white background */
-}
-
-.btn::after {
-    content: ""; 
-    position: absolute;
-    left: 0;
-    bottom: -2px; 
-    width: 0;
-    height: 3px; 
-    background-color: #ff4655;
-    transition: width 0.3s ease;
-    border-radius: 5px;
-}
-
-.btn:hover::after {
-    width: 100%; 
-    background-color: #ff4655;
-}
-
-.btn:hover {
+    background-color: #262626;
+    border-radius: 9px;
     color: #ff4655;
-}
-
-@media (max-width: 1980px) {
-    .container {
-        flex-direction: column;
-    }
-    .search {
-        width: 100%;
-    }
-    .nav-list {
-        flex-direction: column;
-        gap: 15px;
-    }
+    cursor: pointer;
 }
