--- a/styles.css
+++ b/styles.css
@@ -30,9 +30,10 @@
 }
 
 .nav {
-    list-style: none;
+    flex-grow: 1;
     display: flex;
     justify-content: flex-start; 
+    align-items: center;
 }
 
 .nav-list {
